Update v1.0.0 2019 1D-Function